# LTDM

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: model.yaml
data/prompts/: contrast_pairs_v0.jsonl  contrast_pairs_v1.jsonl  informative_pilot.jsonl  uninformative.seed.txt  uninformative.txt
docs/: CONTRAST-PROTOCOL.md  LTDM-phase0-related-work-sweep.md  LTDM-phaseR-go-nogo-memo.md  PLAN-LTDM-phaseH-execution.md  SPEC-LTDM-001-trajectory-extraction-harness.md  engineering-notes.md
scripts/: build_refs.py  build_uninformative.py  check_device.py  validate_contrast.py
src/ltdm/: __init__.py  device.py  io.py  metrics.py  monitor.py  references.py  runner.py
tests/: conftest.py  test_build_refs.py  test_data_integrity.py  test_extraction.py  test_metrics.py  test_references_io.py
